--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "commonjs",
     "target": "es2015",
     "declaration": true,
-    "lib": ["dom", "es6"],
+    "lib": ["es6"],
     "moduleResolution": "node",
     "pretty": true,
     "removeComments": true,
