chore(package): Locked @types/node to the correct version

--- a/package.json
+++ b/package.json
@@ -83,5 +83,10 @@
   },
   "jest-junit": {
     "output": "./ts-test-results.xml"
+  },
+  "david": {
+    "ignore": [
+      "@types/node"
+    ]
   }
 }
