--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "@types/faker": "4.1.2",
     "@types/jest": "23.3.1",
     "@types/node": "10.0.3",
-    "all-contributors-cli": "5.3.0",
+    "all-contributors-cli": "^5.3.0",
+    "babel-core": "^6.26.3",
     "chance": "1.0.16",
     "codecov": "3.0.4",
     "commitizen": "2.10.1",
@@ -88,5 +89,6 @@
     "ignore": [
       "@types/node"
     ]
-  }
+  },
+  "dependencies": {}
 }
