--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -28,7 +28,9 @@
       "avatar_url": "https://avatars1.githubusercontent.com/u/3869412?v=4",
       "profile": "https://github.com/jfmengels",
       "contributions": [
-        "bug"
+        "bug",
+        "code",
+        "test"
       ]
     }
   ]
