--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@types/node": "10.0.3",
     "all-contributors-cli": "5.4.0",
     "babel-core": "6.26.3",
-    "babel-jest": "^23.4.2",
+    "babel-jest": "23.4.2",
     "chance": "1.0.16",
     "codecov": "3.0.4",
     "commitizen": "2.10.1",
