--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -32,6 +32,18 @@
         "code",
         "test"
       ]
+    },
+    {
+      "login": "sheerun",
+      "name": "Adam Stankiewicz",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/292365?v=4",
+      "profile": "http://sheerun.net",
+      "contributions": [
+        "bug",
+        "code",
+        "doc",
+        "test"
+      ]
     }
   ]
 }
