--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -23,17 +23,6 @@
       ]
     },
     {
-      "login": "jfmengels",
-      "name": "Jeroen Engels",
-      "avatar_url": "https://avatars1.githubusercontent.com/u/3869412?v=4",
-      "profile": "https://github.com/jfmengels",
-      "contributions": [
-        "bug",
-        "code",
-        "test"
-      ]
-    },
-    {
       "login": "sheerun",
       "name": "Adam Stankiewicz",
       "avatar_url": "https://avatars0.githubusercontent.com/u/292365?v=4",
@@ -42,6 +31,16 @@
         "bug",
         "code",
         "doc",
+        "test"
+      ]
+    },
+    {
+      "login": "gjtorikian",
+      "name": "Garen Torikian",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/64050?v=4",
+      "profile": "https://github.com/gjtorikian",
+      "contributions": [
+        "code",
         "test"
       ]
     }
