Add @G07cha as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -43,6 +43,15 @@
         "code",
         "test"
       ]
+    },
+    {
+      "login": "G07cha",
+      "name": "Konstantin Azizov",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/6943514?v=4",
+      "profile": "https://github.com/G07cha",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
