--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -53,6 +53,16 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "dozenne",
+      "name": "dozenne",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/1186932?v=4",
+      "profile": "https://github.com/dozenne",
+      "contributions": [
+        "code",
+        "test"
+      ]
     }
   ]
 }
