chore(package): Updated typescript to version 3.2.2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 docker_defaults: &docker_defaults
   docker:
     - image: circleci/node:8
-  working_directory: ~/project/status-board
+  working_directory: ~/project/jest-express
 
 attach_workspace: &attach_workspace
   attach_workspace:
@@ -16,7 +16,7 @@ install_steps: &install_steps
     - restore_cache:
         name: Restore node_modules cache
         keys:
-          - node-modules-{{ .Branch }}-{{ checksum "yarn.lock" }}
+          - node-modules-{{ .Branch }}-{{ checksum "package-lock.json" }}
           - node-modules-{{ .Branch }}-
           - node-modules-
     - run:
@@ -25,36 +25,32 @@ install_steps: &install_steps
           sudo npm install -g greenkeeper-lockfile@1
     - run:
         name: Install Dependencies
-        command: yarn install
+        command: npm i
     - run:
         name: Updating Lockfiles
         command: |
-          greenkeeper-lockfile-update
-          greenkeeper-lockfile-upload
           greenkeeper-shrinkwrap-update
           greenkeeper-shrinkwrap-upload
     - save_cache:
         name: Save node_modules cache
-        key: node-modules-{{ .Branch }}-{{ checksum "yarn.lock" }}
+        key: node-modules-{{ .Branch }}-{{ checksum "package-lock.json" }}
         paths:
           - node_modules/
-          - ~/.cache/yarn
     - persist_to_workspace:
         root: ~/project
-        paths:
-          - status-board
+        paths: jest-express
 
 test_steps: &test_steps
   steps:
     - checkout
     - restore_cache:
-        key: node-modules-{{ .Branch }}-{{ checksum "yarn.lock" }}
+        key: node-modules-{{ .Branch }}-{{ checksum "package-lock.json" }}
     - run:
         name: Install Local Packages
-        command: yarn install --ignore-engines
+        command: npm i
     - run:
         name: Test Suite
-        command: yarn test:ci
+        command: npm run test:ci
 
 jobs:
   install:
@@ -68,18 +64,16 @@ jobs:
       - run:
           name: NPM Vet
           command: |
-            yarn global add npmvet
-            yarn verify:npmvet
+            npm i -g npmvet
+            npm run verify:npmvet
 
-  nsp:
+  audit:
     <<: *docker_defaults
     steps:
       - *attach_workspace
       - run:
-          name: Node Security
-          command: |
-            yarn global add nsp
-            yarn verify:nsp
+          name: NPM Audit Fix
+          command: npm audit fix
 
   tslint:
     <<: *docker_defaults
@@ -90,30 +84,30 @@ jobs:
           command: mkdir reports &&  mkdir reports/tslint
       - run:
           name: TSLint
-          command: yarn tslint
+          command: npm run tslint
       - store_artifacts:
           path: reports/tslint
 
   test-node-6:
-    working_directory: ~/status-board
+    working_directory: ~/jest-express
     docker:
       - image: circleci/node:6
-    <<: *test_steps
-
-  test-node-7:
-    working_directory: ~/status-board
-    docker:
-      - image: circleci/node:7
     <<: *test_steps
 
   test-node-8:
     <<: *docker_defaults
     <<: *test_steps
 
-  test-node-9:
-    working_directory: ~/status-board
+  test-node-10:
+    working_directory: ~/jest-express
     docker:
-      - image: circleci/node:9
+      - image: circleci/node:10
+    <<: *test_steps
+
+  test-node-11:
+    working_directory: ~/jest-express
+    docker:
+      - image: circleci/node:11
     <<: *test_steps
 
   coverage:
@@ -131,9 +125,9 @@ jobs:
             JEST_JUNIT_OUTPUT: reports/jest/jest-test-results.xml
           command: |
             ./cc-test-reporter before-build
-            yarn test:coverage:ci
+            npm run test:coverage:ci
             ./cc-test-reporter after-build --exit-code $?
-            yarn test:coverage:codecov
+            npm run test:coverage:codecov
       - store_artifacts:
           path: coverage
       - store_artifacts:
@@ -147,11 +141,10 @@ jobs:
       - *attach_workspace
       - run:
           name: Build JavaScript
-          command: yarn ts:build
+          command: npm run ts:build
       - persist_to_workspace:
           root: ~/project
-          paths:
-            - status-board
+          paths: jest-express
 
   semantic-release:
     <<: *docker_defaults
@@ -162,7 +155,7 @@ jobs:
           command: mkdir ~/.ssh/ && echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
       - run:
           name: Semantic Release
-          command: yarn semantic-release
+          command: npm run semantic-release
 
 workflows:
   version: 2
@@ -172,30 +165,30 @@ workflows:
       - npmvet:
           requires:
             - install
-      - nsp:
+      - audit:
           requires:
             - npmvet
       - tslint:
           requires:
-            - nsp
+            - audit
       - test-node-6:
-          requires:
-            - tslint
-      - test-node-7:
           requires:
             - tslint
       - test-node-8:
           requires:
             - tslint
-      - test-node-9:
+      - test-node-10:
+          requires:
+            - tslint
+      - test-node-11:
           requires:
             - tslint
       - coverage:
           requires:
             - test-node-6
-            - test-node-7
             - test-node-8
-            - test-node-9
+            - test-node-10
+            - test-node-11
       - build-typescript:
           requires:
             - coverage
