Add @mattmarcello as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -73,6 +73,16 @@
         "code",
         "test"
       ]
+    },
+    {
+      "login": "mattmarcello",
+      "name": "mattmarcello",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/4753479?v=4",
+      "profile": "https://github.com/mattmarcello",
+      "contributions": [
+        "code",
+        "test"
+      ]
     }
   ]
 }
