--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -4,7 +4,7 @@ github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, u
 patreon: jameswlane
 open_collective: # Replace with a single Open Collective username
 ko_fi: jameswlane
-tidelift: npm/jest-express
+tidelift: # npm/jest-express
 paypal: https://www.paypal.me/jameswlane
 buymeacoffee: https://buymeacoff.ee/jameswlane
 tippinme: https://tippin.me/@jameswlane
