--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -6,5 +6,5 @@ open_collective: # Replace with a single Open Collective username
 ko_fi: jameswlane
 tidelift: # npm/jest-express
 paypal: https://www.paypal.me/jameswlane
-buymeacoffee: https://buymeacoff.ee/jameswlane
-tippinme: https://tippin.me/@jameswlane
+# buymeacoffee: https://buymeacoff.ee/jameswlane
+# tippinme: https://tippin.me/@jameswlane
