--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -5,6 +5,6 @@ patreon: jameswlane
 open_collective: # Replace with a single Open Collective username
 ko_fi: jameswlane
 tidelift: # npm/jest-express
-paypal: https://www.paypal.me/jameswlane
-# buymeacoffee: https://buymeacoff.ee/jameswlane
-# tippinme: https://tippin.me/@jameswlane
+custom: https://buymeacoff.ee/jameswlane
+custom: https://tippin.me/@jameswlane
+custom: https://www.paypal.me/jameswlane
