Add @tamias as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -131,6 +131,16 @@
         "test",
         "doc"
       ]
+    },
+    {
+      "login": "tamias",
+      "name": "Ronald J Kimball",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/478001?v=4",
+      "profile": "https://github.com/tamias",
+      "contributions": [
+        "code",
+        "test"
+      ]
     }
   ],
   "contributorsPerLine": 7,
