style(tests): clean up tests to pass linting
Add test files to lint scripts in package.json.
Fix lint errors, including formatting & shadowed variables.
Also, fix erroneous testing for presence of `next` function.

--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "test:watch": "jest --watch",
     "ts:build": "tsc",
     "ts:watch": "tsc -w",
-    "tslint": "tslint --config tslint.json \"src/**/*.ts\"",
-    "tslint:ci": "tslint --config tslint.json --format junit --out reports/tslint/tslint-results.xml \"src/**/*.ts\"",
-    "tslint:fix": "tslint --config tslint.json --fix \"src/**/*.ts\"",
+    "tslint": "tslint --config tslint.json \"src/**/*.ts\" \"test/**/*.ts\"",
+    "tslint:ci": "tslint --config tslint.json --format junit --out reports/tslint/tslint-results.xml \"src/**/*.ts\" \"test/**/*.ts\"",
+    "tslint:fix": "tslint --config tslint.json --fix \"src/**/*.ts\" \"test/**/*.ts\"",
     "verify": "npm run verify:npmvet && npm run verify:david && npm run verify:audit && npm run verify:tscheck && npm run tslint && npm run test",
     "verify:offline": "npm run verify:npmvet && npm run tslint && npm run test",
     "verify:circleci": "circleci config validate",
