--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,10 +1,3 @@
 # These are supported funding model platforms
 
-github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
-patreon: jameswlane
-open_collective: # Replace with a single Open Collective username
-ko_fi: jameswlane
-tidelift: # npm/jest-express
-custom: https://buymeacoff.ee/jameswlane
-custom: https://tippin.me/@jameswlane
-custom: https://www.paypal.me/jameswlane
+github: jameswlane
