--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "coverage:report": "coveralls",
     "precommit": "lint-staged && opt --in pre-commit --exec \"npm run verify\"",
     "semantic-release": "semantic-release",
-    "setup": "npm i -g npmvet david depcheck types-checker commitizen semantic-release-cli all-contributors-cli",
+    "setup": "npm i -g npmvet david types-checker commitizen all-contributors-cli",
     "test": "jest --coverage",
     "test:ci": "jest --ci",
     "test:coverage:ci": "jest --ci --coverage --testResultsProcessor=\"jest-junit\"",
@@ -27,14 +27,12 @@
     "tslint": "tslint --config tslint.json \"src/**/*.ts\" \"test/**/*.ts\"",
     "tslint:ci": "tslint --config tslint.json --format junit --out reports/tslint/tslint-results.xml \"src/**/*.ts\" \"test/**/*.ts\"",
     "tslint:fix": "tslint --config tslint.json --fix \"src/**/*.ts\" \"test/**/*.ts\"",
-    "verify": "npm run verify:npmvet && npm run verify:david && npm run verify:audit && npm run verify:tscheck && npm run tslint && npm run test",
+    "verify": "npm run verify:npmvet && npm run verify:david && npm run verify:tscheck && npm run tslint && npm run test",
     "verify:offline": "npm run verify:npmvet && npm run tslint && npm run test",
     "verify:circleci": "circleci config validate",
-    "verify:ci": "npm run verify:npmvet && npm run verify:audit && npm run test:ci",
-    "verify:check": "depcheck",
+    "verify:ci": "npm run verify:npmvet && npm run test:ci",
     "verify:david": "david",
     "verify:npmvet": "npmvet --renderer ci --strict",
-    "verify:audit": "npm audit fix",
     "verify:tscheck": "types-checker"
   },
   "repository": {
@@ -56,7 +54,7 @@
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
     "@types/chance": "1.0.8",
-    "@types/faker": "4.1.9",
+    "@types/faker": "4.1.10",
     "@types/jest": "25.1.3",
     "@types/node": "13.7.4",
     "all-contributors-cli": "6.14.0",
@@ -67,16 +65,16 @@
     "commitizen": "4.0.3",
     "cz-conventional-changelog": "3.1.0",
     "faker": "4.1.0",
-    "jest": "24.9.0",
+    "jest": "25.1.0",
     "jest-junit": "10.0.0",
-    "lint-staged": "10.0.7",
+    "lint-staged": "10.0.8",
     "opt-cli": "1.6.0",
     "rimraf": "3.0.2",
-    "semantic-release": "15.14.0",
-    "ts-jest": "24.3.0",
-    "tslint": "5.20.1",
+    "semantic-release": "17.0.4",
+    "ts-jest": "25.2.1",
+    "tslint": "6.0.0",
     "tslint-config-airbnb": "5.11.2",
-    "typescript": "3.8.2"
+    "typescript": "3.8.3"
   },
   "config": {
     "commitizen": {
