--- a/package.json
+++ b/package.json
@@ -13,27 +13,17 @@
     "commitmsg": "opt --in commit-msg --exec \"commitlint -e $GIT_PARAMS\"",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate",
-    "coverage:report": "coveralls",
     "precommit": "lint-staged && opt --in pre-commit --exec \"npm run verify\"",
     "semantic-release": "semantic-release",
-    "setup": "npm i -g npmvet david types-checker commitizen all-contributors-cli",
+    "setup": "npm i -g commitizen all-contributors-cli",
     "test": "jest --coverage",
     "test:ci": "jest --ci",
-    "test:coverage:ci": "jest --ci --coverage --testResultsProcessor=\"jest-junit\"",
-    "test:coverage:codecov": "codecov",
     "test:watch": "jest --watch",
     "ts:build": "tsc",
     "ts:watch": "tsc -w",
     "tslint": "tslint --config tslint.json \"src/**/*.ts\" \"test/**/*.ts\"",
-    "tslint:ci": "tslint --config tslint.json --format junit --out reports/tslint/tslint-results.xml \"src/**/*.ts\" \"test/**/*.ts\"",
     "tslint:fix": "tslint --config tslint.json --fix \"src/**/*.ts\" \"test/**/*.ts\"",
-    "verify": "npm run verify:npmvet && npm run verify:david && npm run verify:tscheck && npm run tslint && npm run test",
-    "verify:offline": "npm run verify:npmvet && npm run tslint && npm run test",
-    "verify:circleci": "circleci config validate",
-    "verify:ci": "npm run verify:npmvet && npm run test:ci",
-    "verify:david": "david",
-    "verify:npmvet": "npmvet --renderer ci --strict",
-    "verify:tscheck": "types-checker"
+    "verify": "npm run verify:tscheck && npm run tslint && npm run test"
   },
   "repository": {
     "type": "git",
@@ -51,30 +41,27 @@
   },
   "homepage": "https://github.com/jameswlane/jest-express#readme",
   "devDependencies": {
-    "@commitlint/cli": "8.3.5",
-    "@commitlint/config-conventional": "8.3.4",
-    "@types/chance": "1.1.1",
-    "@types/faker": "4.1.12",
-    "@types/jest": "25.2.3",
-    "@types/node": "16.4.10",
-    "all-contributors-cli": "6.20.0",
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
+    "@types/chance": "^1.1.3",
+    "@types/faker": "^6.6.9",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.13.0",
+    "all-contributors-cli": "^6.24.0",
     "babel-core": "6.26.3",
-    "babel-jest": "25.5.1",
-    "chance": "1.1.7",
-    "codecov": "3.8.1",
-    "commitizen": "4.2.3",
+    "babel-jest": "^29.4.2",
+    "chance": "^1.1.9",
+    "commitizen": "^4.3.0",
     "cz-conventional-changelog": "3.3.0",
-    "faker": "4.1.0",
-    "jest": "25.5.4",
-    "jest-junit": "10.0.0",
-    "lint-staged": "10.5.4",
+    "faker": "^6.6.6",
+    "jest": "^29.4.2",
+    "jest-junit": "^15.0.0",
+    "lint-staged": "^13.1.1",
     "opt-cli": "1.6.0",
-    "rimraf": "3.0.2",
-    "semantic-release": "17.4.2",
-    "ts-jest": "25.5.1",
-    "tslint": "6.1.3",
-    "tslint-config-airbnb": "5.11.2",
-    "typescript": "3.9.9"
+    "rimraf": "^4.1.2",
+    "semantic-release": "^20.1.0",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5"
   },
   "config": {
     "commitizen": {
@@ -83,16 +70,6 @@
   },
   "jest-junit": {
     "output": "./ts-test-results.xml"
-  },
-  "greenkeeper": {
-    "ignore": [
-      "@types/node"
-    ]
-  },
-  "david": {
-    "ignore": [
-      "@types/node"
-    ]
   },
   "dependencies": {
     "jest-node-http": "1.0.0"
