test(eslint): added eslint

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "test:watch": "jest --watch",
     "ts:build": "tsc",
     "ts:watch": "tsc -w",
-    "tslint": "tslint --config tslint.json \"src/**/*.ts\" \"test/**/*.ts\"",
-    "tslint:fix": "tslint --config tslint.json --fix \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint --fix src/**/*.ts",
     "verify": "npm run verify:tscheck && npm run tslint && npm run test"
   },
   "repository": {
@@ -47,12 +47,18 @@
     "@types/faker": "^6.6.9",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
     "all-contributors-cli": "^6.24.0",
     "babel-core": "6.26.3",
     "babel-jest": "^29.4.2",
     "chance": "^1.1.9",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "3.3.0",
+    "eslint": "^8.34.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "faker": "^6.6.6",
     "jest": "^29.4.2",
     "jest-junit": "^15.0.0",
