--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -9,14 +9,6 @@ on:
       - master
 
 jobs:
-  install-dependencies:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - run: npm ci
   lint:
     needs: install-dependencies
     runs-on: ubuntu-latest
@@ -35,6 +27,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
+      - run: npm ci
       - run: npm run test:ci
   build:
     needs: test
@@ -43,8 +36,13 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
+      - run: npm ci
       - run: npm run ts:build
+      - uses: actions/upload-artifact@v3
+        with:
+          name: build-artifact-${{github.sha}}
+          path: lib
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
@@ -54,7 +52,12 @@ jobs:
         with:
           node-version: 18
           registry-url: https://registry.npmjs.org/
-      - run: npx semantic-release
+      - run: npm ci
+      - uses: actions/download-artifact@v3
+        with:
+          name: build-artifact-${{github.sha}}
+          path: lib
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - run: npx semantic-release
