--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,7 +1,4 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
-
-name: Node.js Package
+name: npm publish
 
 on:
   push:
@@ -19,6 +16,7 @@ jobs:
           node-version: 18
       - run: npm ci
       - run: npm run lint
+
   test:
     needs: lint
     runs-on: ubuntu-latest
@@ -29,6 +27,7 @@ jobs:
           node-version: 18
       - run: npm ci
       - run: npm run test:ci
+
   build:
     needs: test
     runs-on: ubuntu-latest
@@ -43,6 +42,7 @@ jobs:
         with:
           name: build-artifact-${{github.sha}}
           path: lib
+
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
