--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -55,6 +55,7 @@ jobs:
           node-version: 18
           registry-url: https://registry.npmjs.org/
       - run: npm ci
+      - run: npm whoami --registry https://registry.npmjs.org/
       - uses: actions/download-artifact@v3
         with:
           name: build-artifact-${{github.sha}}
