--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -56,6 +56,7 @@ jobs:
           name: build-artifact-${{github.sha}}
           path: lib
       - run: npm ci
+      - run: cat /home/runner/work/_temp/.npmrc
       - run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
