--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,9 +1,9 @@
 name: npm publish
 
-#on:
-#  push:
-#    branches:
-#      - master
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   lint:
@@ -56,9 +56,7 @@ jobs:
           name: build-artifact-${{github.sha}}
           path: lib
       - run: npm ci
-      - run: cat /home/runner/work/_temp/.npmrc
-#      - run: npx semantic-release
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          NPM_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
-      - run: npm whoami --registry https://registry.npmjs.org/
+      - run: npx semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
